Refactored for performance and compatibility

--- a/demos/index.html
+++ b/demos/index.html
@@ -89,7 +89,7 @@
                 },
                 'onChange': (c, d) => {
                     // Example of updating slide counter on slide change
-                    carousel.querySelector('[data-carousel-caption]').innerHTML = `Slide ${c.index + 1} of ${d.slides.length}`
+                    carousel.querySelector('[data-carousel-caption]').innerHTML = `Slide ${c.index + 1} of ${c.slides.length}`
                 }
             })
         </script>
